--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,49 @@
 appdirs==1.4.4
+appnope==0.1.3
+backcall==0.2.0
 beautifulsoup4==4.11.2
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
 cryptography==39.0.1
+executing==1.2.0
+fastjsonschema==2.16.3
 frozendict==2.3.5
 html5lib==1.1
 idna==3.4
+ipython-genutils==0.2.0
 lxml==4.9.2
+mistune==2.0.5
 multitasking==0.0.11
 numpy==1.24.2
 pandas==1.5.3
+pickleshare==0.7.5
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pycparser==2.21
+Pygments==2.14.0
+pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-json-logger==2.0.7
 pytz==2022.7.1
+PyYAML==6.0
+pyzmq==25.0.0
 requests==2.28.2
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+Send2Trash==1.8.0
 six==1.16.0
+sniffio==1.3.0
 soupsieve==2.4
+tinycss2==1.2.1
+tornado==6.2
+traitlets==5.9.0
+uri-template==1.2.0
 urllib3==1.26.14
+wcwidth==0.2.6
+webcolors==1.12
 webencodings==0.5.1
+websocket-client==1.5.1
+widgetsnbextension==4.0.5
 yfinance==0.2.12
